package leepans.model;

import jakarta.persistence.Entity;

@Entity
public class Boleto extends Pagamento {
    
    private String codigoBarras;

    public String getCodigoBarras() {
        return codigoBarras;
    }

    public void setCodigoBarras(String codigoBarras) {
        this.codigoBarras = codigoBarras;
    }
}
