package leepans.model;

import java.math.BigDecimal;
import java.time.LocalDateTime;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.Inheritance;
import jakarta.persistence.InheritanceType;
import jakarta.persistence.OneToOne;

@Entity
@Inheritance(strategy = InheritanceType.JOINED)
public abstract class Pagamento extends DefaultEntity {

    @OneToOne(optional = false)
    private Pedido pedido;

    @Column(name = "data_processado")
    private LocalDateTime dataProcessado;
    @Column(name = "valor", precision = 19, scale = 2)
    private BigDecimal valor;

    @Column(name = "codigo_tipo_pagamento", nullable = false)
    private TipoPagamento tipoPagamento;

    @Column(name = "codigo_status_pagamento", nullable = false)
    private StatusPagamento statusPagamento;

    @Column(name = "tentativas_processamento", nullable = false)
    private Integer tentativasProcessamento = 0;

    public Pedido getPedido() {
        return pedido;
    }

    public void setPedido(Pedido pedido) {
        this.pedido = pedido;
    }

    public LocalDateTime getDataProcessado() {
        return dataProcessado;
    }

    public void setDataProcessado(LocalDateTime dataProcessado) {
        this.dataProcessado = dataProcessado;
    }

    public BigDecimal getValor() {
        return valor;
    }

    public void setValor(BigDecimal valor) {
        this.valor = valor;
    }

    public TipoPagamento getTipoPagamento() {
        return tipoPagamento;
    }

    public void setTipoPagamento(TipoPagamento tipoPagamento) {
        this.tipoPagamento = tipoPagamento;
    }

    public StatusPagamento getStatusPagamento() {
        return statusPagamento;
    }

    public void setStatusPagamento(StatusPagamento statusPagamento) {
        this.statusPagamento = statusPagamento;
    }

    public Integer getTentativasProcessamento() {
        return tentativasProcessamento;
    }

    public void setTentativasProcessamento(Integer tentativasProcessamento) {
        this.tentativasProcessamento = tentativasProcessamento;
    }
}
