package leepans.model;

public enum Perfil {
    ADMIN,
    CLIENTE,
    FUNCIONARIO
}
