@startuml ecommerce
class DefaultEntity{
- id : Long
- dataCadastro : LocalDateTime
- version : Integer

}

class Panela{
- modelo : String
- preco : BigDecimal
- peso : Double
- capacidadeLitros : Double
- descricao : String
- isInducao : Boolean
}

class Colecao{
- nome : String
}

class Categoria{
- tipo : String
}

class Cor{
- nome : String
}

abstract Componente{
- peso : Double
- materiais : List<Material>
}

enum Tamanho{
+ PEQUENA
+ MEDIA
+ GRANDE
+ GIGANTE
}

enum TipoSustentacao{
+ CABO
+ ALCA
}
class Fornecedor{
- nome : String
- telefone : String
- cnpj : String
}

class Material{
- nome : String
- qualidades[] : String
}

class Tampa{
- isDePressao : Boolean
}

class Fundo{
- espessura : Double
- isAntiaderente : Boolean
}

class Sustentacao{
- tamanhoEmCm : Integer
- quantidade : Integer
- tipoSustentacao : TipoSustentacao
}

class Usuario{
- nome : String
- sobrenome : String
- login : String
- senhaHash : String
}

enum Perfil{
+ ADMIN
+ FUNCIONARIO
+ CLIENTE
}

class Endereco{
- rua : String
- numero : String
- cidade : String
- estado : String
- cep : String
}

class ListaDesejo{
}

class Pedido{
- valorBruto : BigDecimal
- valorDesconto : BigDecimal
- endereco : Endereco
}

class ItemPedido{
- quantidade : Integer
- valorUnitario : BigDecimal
}

enum StatusPedido{
+ CANCELADO
+ PENDENTE
+ ENTREGUE
}

class CupomDesconto {
- codigo : String
- percentualDesconto : BigDecimal
- valorDesconto : BigDecimal
- valorMinimoCompra : BigDecimal
- dataValidade : LocalDateTime
- quantidadeDisponivel : Integer
- ativo : boolean
}

abstract Pagamento{
- dataProcessado : LocalDateTime
- valor : BigDecimal
- tipoPagamento : TipoPagamento
- statusPagamento : StatusPagamento
- tentativasProcessamento : Integer
}

class CartaoCredito{
- numero : String
- titular : String
- validade : LocalDate
- codigoSeguranca : String
}

class CartaoDebito{
- numero : String
- titular : String
- validade : LocalDate
- codigoSeguranca : String
}

class Pix{
- chavePix : String
}

class Boleto{
- codigoBarras : String
}

enum TipoPagamento{
+ CARTAO_CREDITO
+ CARTAO_DEBITO
+ BOLETO
+ PIX
}

enum StatusPagamento{
+ PENDENTE
+ APROVADO
+ RECUSADO
}


Panela "*" o--> "1" Colecao
Colecao "1" --> "*" Panela
Panela "1" *--> "1" Fundo
Panela "1" *--> "1" Sustentacao
Panela "1" *--> "0..1" Tampa
Panela "*" o--> "1" Fornecedor
Fornecedor "1" --> "*" Panela
Panela "*" --> "1" Tamanho
Panela "*" o--> "1" Categoria
Categoria "1" --> "*" Panela
Panela "*" o--> "1" Cor
Panela "*" o--> "1" Material
ItemPedido "*" --> "1" Panela

Componente <|-up- Tampa
Componente <|-up- Fundo
Componente <|-up- Sustentacao
Componente "*" o-up- "*" Material

Sustentacao "*" -down-> "1" TipoSustentacao

Usuario "*" --> "1" Perfil
Usuario "*" --> "1" Endereco

ListaDesejo "1" --> "1" Usuario
ListaDesejo "*" --> "*" Panela

Pedido "*" --> "1" Usuario
Pedido "1" --> "*" ItemPedido
Pedido "*" --> "1" StatusPedido
Pedido "1" --> "1" Pagamento
Pedido "*" --> "0..1" CupomDesconto
Pagamento "*" --> "1" TipoPagamento

Pagamento "*" --> "1" StatusPagamento
Pagamento <|-- CartaoCredito
Pagamento <|-- CartaoDebito
Pagamento <|-- Pix
Pagamento <|-- Boleto

@enduml
